--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-heroku": "react-scripts start && cd ../backend && npm install && npm run start"
   },
   "eslintConfig": {
     "extends": [
