--- a/heroku.yml
+++ b/heroku.yml
@@ -1,21 +1,13 @@
-networks:
-  theNetwork:
-    driver: bridge
-
-services:
+build:
   backend:
     container_name: backend
     restart: always
     build: ./backend
     ports:
       - "1000:1000"
-    networks:
-      - theNetwork
   frontend:
     container_name: frontend
     restart: always
     build: ./frontend
     ports:
       - "3000:3000"
-    networks:
-      - theNetwork
